[package]
name = "ab-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
clap = { version = "4.0.27", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking","json"] }
tokio = {version="1.19.2", features=["full"]}
serde = {version="1.0", features=["derive"]}